--- a/index.html
+++ b/index.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Inicio</title>
+  </head>
+  <body>
+    <header>
+      <div class="imagen">
+        <img src="sources/img/Detalles/showdown.jpg" alt="" />
+      </div>
+    </header>
+    <article>
+      <div class="contenedor">
+        <div class="contenedor_cartas">
+          <img src="sources/img/Cartas/1.png" alt="" />
+          <img src="sources/img/Cartas/2.png" alt="" />
+          <img src="sources/img/Cartas/3.png" alt="" />
+          <img src="sources/img/Cartas/4.png" alt="" />
+          <img src="sources/img/Cartas/5.png" alt="" />
+          <img src="sources/img/Cartas/6.png" alt="" />
+          <img src="sources/img/Cartas/7.png" alt="" />
+          <img src="sources/img/Cartas/8.png" alt="" />
+          <img src="sources/img/Cartas/9.png" alt="" />
+          <img src="sources/img/Cartas/10.png" alt="" />
+          <img src="sources/img/Cartas/11.png" alt="" />
+          <img src="sources/img/Cartas/12.png" alt="" />
+          <img src="sources/img/Cartas/13.png" alt="" />
+          
+        </div>
+        <div class="datos">
+          <div class="table">
+            <table>
+              <tr>
+                <th>Nombre</th>
+                <th>Edad</th>
+                <th>Ciudad</th>
+              </tr>
+              <tr>
+                <td>John</td>
+                <td>30</td>
+                <td>New York</td>
+              </tr>
+              <tr>
+                <td>Jane</td>
+                <td>25</td>
+                <td>Los Angeles</td>
+              </tr>
+              <tr>
+                <td>Bob</td>
+                <td>35</td>
+                <td>Chicago</td>
+              </tr>
+            </table>
+          </div>
+          <div class="registro">
+            <form>
+                <h1>Registro cartas</h1>
+                <input type="text" name="numero_carta" placeholder="Número de Carta" required>
+                <input type="text" name="carta" placeholder="Carta" required>
+                <button type="submit">Guardar</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </article>
+    <footer></footer>
+  </body>
 </html>
